--- a/app/src/main/res/layout/item_game_playtime.xml
+++ b/app/src/main/res/layout/item_game_playtime.xml
@@ -1,33 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="56dp"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:gravity="center_vertical"
-    android:padding="8dp">
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp">
 
     <ImageView
         android:id="@+id/imgGame"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:contentDescription="Game icon"
-        android:scaleType="centerInside"/>
+        android:layout_width="38dp"
+        android:layout_height="38dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/bg_constella"
+        android:contentDescription="Game icon"/>
 
     <TextView
         android:id="@+id/tvGameName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_weight="1"
-        android:layout_marginStart="12dp"
-        android:text="Game name"
-        android:textSize="14sp"
-        android:textColor="#1E1E1E"/>
+        android:text="Star Sweep"
+        android:textColor="#1E1E1E"
+        android:textSize="12sp"
+        android:fontFamily="serif"/>
 
     <TextView
-        android:id="@+id/tvMinutes"
+        android:id="@+id/tvGameMin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="12 min"
-        android:textSize="13sp"
-        android:textColor="#1E1E1E"/>
+        android:textColor="#1E1E1E"
+        android:textSize="12sp"
+        android:fontFamily="serif"
+        android:textStyle="bold"/>
 </LinearLayout>
