--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -95,15 +95,17 @@
         <item name="android:background">@drawable/bg_history_rect</item>
     </style>
 
-    <style name="Base.Theme.StarSweepActivity" parent="Theme.Material3.DayNight.NoActionBar" />
+    <style
+        name="Base.Theme.StarSweepActivity"
+        parent="Theme.Material3.DayNight.NoActionBar" />
 
     <style name="HomeCalendarWeekText">
-        <item name="android:textColor">#6A6A6A</item>
+        <item name="android:textColor">#000000</item>
         <item name="android:textSize">11sp</item>
     </style>
 
     <style name="HomeCalendarDateText">
-        <item name="android:textColor">#1E1E1E</item>
+        <item name="android:textColor">#000000</item>
         <item name="android:textSize">12sp</item>
     </style>
 
