--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -73,7 +74,8 @@
                     android:src="@drawable/ic_menu"
                     android:tint="#000000"
                     app:layout_constraintTop_toBottomOf="@id/topDivider"
-                    app:layout_constraintEnd_toEndOf="parent" />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    tools:ignore="UseAppTint" />
 
                 <!-- ✅ Panel A quote will be overwritten daily by MainActivity -->
                 <TextView
